--- a/GroupSixTest.html
+++ b/GroupSixTest.html
@@ -2,9 +2,9 @@
 
 <html>
 	<head>
-		<title>CarsonL's branch</title>
+		<title>Master branch</title>
 	</head>
 	<body>
-		<p>This is suppose to show up only on branch CarsonLing</p>
+		<p></p>
 	</body>
 </html>
