Development branch initial commit

--- a/GroupSixTest.html
+++ b/GroupSixTest.html
@@ -2,9 +2,9 @@
 
 <html>
 	<head>
-		<title>Master branch</title>
+		<title>Development branch</title>
 	</head>
 	<body>
-		<p></p>
+		<p>This is Development Branch, make changes here</p>
 	</body>
 </html>
