added home page and css

--- a/GroupSixTest.html
+++ b/GroupSixTest.html
@@ -5,6 +5,6 @@
 		<title>Development branch</title>
 	</head>
 	<body>
-		<p>This is Development Branch, make changes here</p>
+		<p>This is Development Branch, make changes here.</p>
 	</body>
 </html>
