added all four pages and link them together

--- a/gardening.html
+++ b/gardening.html
@@ -2,14 +2,14 @@
 
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>Gardening Page</title>
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is Home page</p>
+		<p class="test">This is gardening page</p>
 		<a href="lawnMowing.html">Lawn Mowing Page</a>
 		<br>
-		<a href="gardening.html">Gardening Page</a>
+		<a href="home.html">Home Page</a>
 		<br>
 		<a href="contact.html">Contact Page</a>
 	</body>
