--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,15 @@
 
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>Contact Page</title>
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is Home page</p>
+		<p class="test">This is Contact page</p>
 		<a href="lawnMowing.html">Lawn Mowing Page</a>
 		<br>
 		<a href="gardening.html">Gardening Page</a>
 		<br>
-		<a href="contact.html">Contact Page</a>
+		<a href="home.html">Home Page</a>
 	</body>
 </html>
