--- a/lawnMowing.html
+++ b/lawnMowing.html
@@ -2,12 +2,12 @@
 
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>Lawn mowing Page</title>
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is Home page</p>
-		<a href="lawnMowing.html">Lawn Mowing Page</a>
+		<p class="test">This is lawn mowing page</p>
+		<a href="home.html">Home Page</a>
 		<br>
 		<a href="gardening.html">Gardening Page</a>
 		<br>
