assigned names (dani)

--- a/gardening.html
+++ b/gardening.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is gardening page</p>
+		<p class="test">This is gardening page (Carson)</p>
 		<a href="lawnMowing.html">Lawn Mowing Page</a>
 		<br>
 		<a href="home.html">Home Page</a>
