--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is Contact page</p>
+		<p class="test">This is Contact page (danielle)</p>
 		<a href="lawnMowing.html">Lawn Mowing Page</a>
 		<br>
 		<a href="gardening.html">Gardening Page</a>
