--- a/gardening.html
+++ b/gardening.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is gardening page</p>
+		<div class ="TitleBackground">
+		<h1 class="Title"><i>Gardening Service</i></h1>
 		<a href="lawnMowing.html">Lawn Mowing Page</a>
 		<br>
 		<a href="home.html">Home Page</a>
