--- a/gardening.html
+++ b/gardening.html
@@ -8,11 +8,15 @@
 	<body>
 		<div class ="TitleBackground">
 		<h1 class="Title"><i>Gardening Service</i></h1>
+		<dic class="menuBar">
 
-		<a href="lawnMowing.html">Lawn Mowing Page</a>
-		<br>
-		<a href="home.html">Home Page</a>
-		<br>
-		<a href="contact.html">Contact Page</a>
+		<a href="home.html" class="homePageLink">Home Page</a>
+		<a href="contact.html" class="contactPageLink">Contact Page</a>
+		<a href="lawnMowing.html" class="lawnMowingPageLink">Lawn Mowing Page</a>
+
+		<img src="gardening1.jpeg" class="gardeningImage1">
+
+		
+		
 	</body>
 </html>
