started home page (dani)

--- a/home.html
+++ b/home.html
@@ -6,11 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
+      
+    <div id="homebanner">
 		<p class="test">This is Home page (danielle)</p>
-		<a href="lawnMowing.html">Lawn Mowing Page</a>
-		<br>
-		<a href="gardening.html">Gardening Page</a>
-		<br>
-		<a href="contact.html">Contact Page</a>
+		<a href="lawnMowing.html" class="homeheaderlink" id="homelawnlink">Lawn Mowing Page</a>
+		<a href="gardening.html" class="homeheaderlink" id="homegardenlink">Gardening Page</a>
+		<a href="contact.html" class="homeheaderlink" id="homecontactlink">Contact Page</a>
+		</div>
+    <img src="https://i.pinimg.com/originals/1b/f6/e2/1bf6e23ef97a04fb4f0217a5d75d2da2.jpg" id="hometop">
 	</body>
 </html>
