complete gardening page(CarsonL)

--- a/gardening.html
+++ b/gardening.html
@@ -15,6 +15,47 @@
 		<a href="lawnMowing.html" class="lawnMowingPageLink">Lawn Mowing Page</a>
 
 		<img src="gardening1.jpeg" class="gardeningImage1">
+		<div class="gardeningP1">
+			<p>This, is how good we can make your tree looks like. </p>
+			<p>With perfessional retired barbers, we make the best trees.</p>
+			<p>There's also variety styles that you can choose from.</p>
+			<p>Order now and you can receive a free hair cut. Only 999999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+		<img src="images.jpeg" class="gardeningImage2">
+		<div class="gardeningP2">
+			<p>Having some spacing trouble? </p>
+			<p>Not having enough space for your garden?</p>
+			<p>With perfessional barbie sellers,  we can make you garden really tiny.</p>
+			<p>There's also a variety of sizes that you can choose from.</p>
+			<p>Order now and you can receive a free barbie. Only 899999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+		<img src="cartoon-scarecrow-of-straw-in-a-red-shirt-and-hat-buttons-instead-of-eyes-PBRH2K.jpg" class="gardeningImage3">
+		<div class="gardeningP3">
+			<p>Having some food shortages? </p>
+			<p>All your food is eaten by you annoying kid?</p>
+			<p>With perfessional cartoon artists,  we can make you garden really scary.</p>
+			<p>With a cartoon scarecrow, you won't have to worry about your food getting stolen ever again.</p>
+			<p>Order now and you can receive a free cartton book of our choice. Only 1099999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+		<img src="download.jpeg" class="gardeningImage4">
+		<div class="gardeningP4">
+			<p>There's no pot in your house? </p>
+			<p>Don't worry, we can plant your flowers in anything</p>
+			<p>With perfessional building contructors, you can fit your garden in anything you can think of.</p>
+			<p>There's no need to buy a pot ever again!</p>
+			<p>Order now and you can receive a free flower of our choice. Only 100099999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+
+		
+		
 
 		
 		
