finish both gardening and lawn Mowing (CarsonL)

--- a/lawnMowing.html
+++ b/lawnMowing.html
@@ -2,15 +2,62 @@
 
 <html>
 	<head>
-		<title>Lawn mowing Page</title>
+		<title>Lawn Mowing Page</title>
 		<link rel="stylesheet" type="text/css" href="landscapeProject.css">
 	</head>
 	<body>
-		<p class="test">This is lawn mowing page (Carson)</p>
-		<a href="home.html">Home Page</a>
-		<br>
-		<a href="gardening.html">Gardening Page</a>
-		<br>
-		<a href="contact.html">Contact Page</a>
+		<div class ="TitleBackground">
+		<h1 class="Title"><i>Lawn Mowing Service</i></h1>
+		<dic class="menuBar">
+
+		<a href="home.html" class="homePageLink">Home Page</a>
+		<a href="contact.html" class="contactPageLink">Contact Page</a>
+		<a href="gardening.html" class="lawnMowingPageLink">Gardening Page</a>
+
+		<img src="lawn1.jpeg" class="lawnImage1">
+		<div class="lawnP1">
+			<p>Say hi to our best lawn mower.</p>
+			<p>With 3 years of experience (that's his age), he can cut your grass very well.</p>
+			<p>There's also other people you can choose from, aging from 1-12 months.</p>
+			<p>Order now and you can who to ruin your lawn. Only 9979999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+		<img src="lawn2.jpeg" class="lawnImage2">
+		<div class="lawnP2">
+			<p>Having trust issues? </p>
+			<p>Not wanting a person to ruin your lawn?</p>
+			<p>Try our robot service.</p>
+			<p>Doesn't include charging, transporting of the robot, starting, and instructions.</p>
+			<p>Good Luck! Only 120199999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+		<img src="lawn3.jpeg" class="lawnImage3">
+		<div class="lawnP3">
+			<p>Your lawn isn't attractive enough? </p>
+			<p>Bored looking a a piece of green?</p>
+			<p>You have the right person.</p>
+			<p>We can mow your lawn into which ever shape you want. Give us a picture, then you can mow your lawn yourself...</p>
+			<p>Order now and you can receive a free picture of our choice. Only 1083084309999.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+		<img src="lawn4.jpeg" class="lawnImage4">
+		<div class="lawnP4">
+			<p>Are you terrible at mowing? </p>
+			<p>Don't worry, we provide you with the best lawn mowing simulator on the world!</p>
+			<p>With perfessional lawn mowers teaching you step by step.</p>
+			<p>There's no need to worry ever again!</p>
+			<p>Order now and you can receive a free download, you can pay when you get in. Only 120901129183918.</p>
+			<a href="contact.html"><p>Call now!</p></a>
+		</div>
+
+
+		
+		
+
+		
+		
 	</body>
 </html>
