--- a/gardening.html
+++ b/gardening.html
@@ -23,7 +23,7 @@
 			<a href="contact.html"><p>Call now!</p></a>
 		</div>
 
-		<img src="images.jpeg" class="gardeningImage2">
+		<img src="garden2.jpeg" class="gardeningImage2">
 		<div class="gardeningP2">
 			<p>Having some spacing trouble? </p>
 			<p>Not having enough space for your garden?</p>
@@ -33,7 +33,7 @@
 			<a href="contact.html"><p>Call now!</p></a>
 		</div>
 
-		<img src="cartoon-scarecrow-of-straw-in-a-red-shirt-and-hat-buttons-instead-of-eyes-PBRH2K.jpg" class="gardeningImage3">
+		<img src="garden3.jpg" class="gardeningImage3">
 		<div class="gardeningP3">
 			<p>Having some food shortages? </p>
 			<p>All your food is eaten by you annoying kid?</p>
@@ -43,7 +43,7 @@
 			<a href="contact.html"><p>Call now!</p></a>
 		</div>
 
-		<img src="download.jpeg" class="gardeningImage4">
+		<img src="garden4.jpeg" class="gardeningImage4">
 		<div class="gardeningP4">
 			<p>There's no pot in your house? </p>
 			<p>Don't worry, we can plant your flowers in anything</p>
