fixed some bugs on home and contact page

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 		<div id="homep1">
     <img src="https://i.pinimg.com/originals/1b/f6/e2/1bf6e23ef97a04fb4f0217a5d75d2da2.jpg" id="pic1">
     <p> our company has many great quality services that are right at your disposal.</p>
-    <p>see our <a href="gardening.html">gardening page</a> and our <a href="lawnMowing">lawn mowing page</a> for more information on the WONDERS that we can do for your home and yard. </p>
+    <p>see our <a href="gardening.html">gardening page</a> and our <a href="lawnMowing.html">lawn mowing page</a> for more information on the WONDERS that we can do for your home and yard. </p>
     </div>
     
     <div id="homep2">
